--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://admin:ndswiips2ps3com@cluster0.zdgo1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET=pdi_secret_$%&/=?
+CORS_ORIGIN=https://pordondeiba-pdi.netlify.app/
